--- a/package.json
+++ b/package.json
@@ -25,15 +25,45 @@
     "help": "nx help"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "document-register-element": "1.13.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "styled-components": "4.4.1",
+    "react-router-dom": "5.1.2"
+  },
   "devDependencies": {
+    "@babel/preset-react": "7.7.4",
+    "@nrwl/cypress": "8.11.0",
+    "@nrwl/eslint-plugin-nx": "8.11.0",
+    "@nrwl/express": "^8.11.0",
+    "@nrwl/jest": "8.11.0",
+    "@nrwl/node": "^8.11.0",
+    "@nrwl/react": "^8.11.0",
+    "@nrwl/web": "8.11.0",
     "@nrwl/workspace": "8.11.0",
+    "@testing-library/react": "9.4.0",
+    "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
+    "@types/react": "16.9.17",
+    "@types/react-dom": "16.9.4",
+    "@types/react-router-dom": "5.1.3",
+    "@types/styled-components": "4.4.1",
+    "@typescript-eslint/eslint-plugin": "2.3.2",
+    "@typescript-eslint/parser": "2.3.2",
+    "cypress": "3.6.1",
     "dotenv": "6.2.0",
+    "eslint": "6.1.0",
+    "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-import": "2.19.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.17.0",
+    "eslint-plugin-react-hooks": "2.3.0",
+    "jest": "24.1.0",
+    "prettier": "1.18.2",
+    "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "eslint": "6.1.0",
-    "typescript": "~3.5.3",
-    "prettier": "1.18.2"
+    "typescript": "~3.5.3"
   }
 }
