--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "styled-components": "4.4.1",
-    "react-router-dom": "5.1.2"
+    "react-router-dom": "5.1.2",
+    "express": "4.17.1"
   },
   "devDependencies": {
     "@babel/preset-react": "7.7.4",
@@ -64,6 +65,7 @@
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "@types/express": "4.17.0"
   }
 }
