feat: refactor, add libs

--- a/nx.json
+++ b/nx.json
@@ -19,6 +19,12 @@
     },
     "api": {
       "tags": []
+    },
+    "data-service": {
+      "tags": []
+    },
+    "models": {
+      "tags": []
     }
   }
 }
