--- a/package.json
+++ b/package.json
@@ -49,16 +49,21 @@
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.8.2",
+    "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
     "firebase": "^7.7.0",
     "firebase-admin": "^8.9.1",
     "firebase-functions": "^3.3.0",
+    "googleapis": "^47.0.0",
     "material-ui-image": "^3.2.2",
     "mobx": "^5.15.2",
     "mobx-react-lite": "^1.5.2",
     "mobx-react-router": "^4.1.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "5.1.2",
@@ -79,9 +84,11 @@
     "@nrwl/web": "8.11.0",
     "@nrwl/workspace": "8.11.0",
     "@testing-library/react": "9.4.0",
+    "@types/cookie-session": "^2.0.37",
     "@types/express": "4.17.0",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
+    "@types/passport-google-oauth20": "^2.0.3",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
     "@types/react-router-dom": "5.1.3",
