--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@testing-library/react": "9.4.0",
     "@types/cookie-session": "^2.0.37",
     "@types/express": "4.17.0",
+    "@types/googlemaps": "^3.39.2",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
     "@types/passport-google-oauth20": "^2.0.3",
