(feat) Nearest places on the map (BE)

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "firebase": "^7.7.0",
     "firebase-admin": "^8.9.1",
     "firebase-functions": "^3.3.0",
+    "geolib": "^3.2.1",
     "googleapis": "^47.0.0",
     "material-ui-image": "^3.2.2",
     "mobx": "^5.15.2",
@@ -86,6 +87,7 @@
     "@testing-library/react": "9.4.0",
     "@types/cookie-session": "^2.0.37",
     "@types/express": "4.17.0",
+    "@types/geolib": "^2.0.23",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
     "@types/passport-google-oauth20": "^2.0.3",
