--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "nx build",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
+    "lint-api": "nx workspace-lint && nx lint api",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
@@ -57,6 +58,7 @@
     "firebase": "^7.7.0",
     "firebase-admin": "^8.9.1",
     "firebase-functions": "^3.3.0",
+    "geolib": "^3.2.1",
     "googleapis": "^47.0.0",
     "material-ui-image": "^3.2.2",
     "mobx": "^5.15.2",
@@ -87,6 +89,7 @@
     "@types/cookie-session": "^2.0.37",
     "@types/express": "4.17.0",
     "@types/googlemaps": "^3.39.2",
+    "@types/geolib": "^2.0.23",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
     "@types/passport-google-oauth20": "^2.0.3",
@@ -98,17 +101,18 @@
     "@typescript-eslint/parser": "2.3.2",
     "cypress": "3.6.1",
     "dotenv": "6.2.0",
-    "eslint": "6.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "6.0.0",
-    "eslint-plugin-import": "2.19.1",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.17.0",
     "eslint-plugin-react-hooks": "2.3.0",
     "jest": "24.1.0",
-    "prettier": "1.18.2",
+    "prettier": "^1.19.1",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "typescript": "^3.8.3"
   }
 }
