--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-dom": "16.12.0",
     "react-router-dom": "5.1.2",
     "react-spinners": "^0.8.0",
+    "request": "^2.88.2",
     "styled-components": "4.4.1",
     "tsoa": "^2.5.12",
     "typeface-roboto": "0.0.75",
