--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.43",
     "@material-ui/styles": "^4.8.2",
+    "@types/d3": "^5.7.2",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
+    "d3": "^5.15.0",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
     "firebase": "^7.7.0",
