--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
+    "d3": "^5.15.0",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
     "firebase": "^7.7.0",
@@ -89,6 +90,7 @@
     "@nrwl/workspace": "8.11.0",
     "@testing-library/react": "9.4.0",
     "@types/cookie-session": "^2.0.37",
+    "@types/d3": "^5.7.2",
     "@types/express": "4.17.0",
     "@types/googlemaps": "^3.39.2",
     "@types/geolib": "^2.0.23",
