fix: revert old models & delete await return

--- a/apps/api/.eslintrc
+++ b/apps/api/.eslintrc
@@ -1,1 +1,6 @@
-{ "extends": "../../.eslintrc", "rules": {} }
+{
+  "extends": "../../.eslintrc",
+  "rules": {
+    "no-return-await": "warn"
+  }
+}
