--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "types": ["node", "jest", "express"]
   },
-  "include": ["**/*.ts"]
+  "include": [".eslintrc.js", "**/*.ts"]
 }
