--- a/package.json
+++ b/package.json
@@ -61,14 +61,15 @@
     "document-register-element": "1.13.1",
     "express": "4.17.1",
     "firebase": "^7.7.0",
-    "firebase-admin": "^8.9.1",
-    "firebase-functions": "^3.3.0",
+    "firebase-admin": "^8.13.0",
+    "firebase-functions": "^3.11.0",
     "geolib": "^3.2.1",
     "googleapis": "^47.0.0",
     "material-ui-image": "^3.2.2",
     "mobx": "^5.15.2",
     "mobx-react-lite": "^1.5.2",
     "mobx-react-router": "^4.1.0",
+    "moment": "^2.27.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "react": "16.12.0",
@@ -98,6 +99,7 @@
     "@types/geolib": "^2.0.23",
     "@types/googlemaps": "^3.39.2",
     "@types/jest": "24.0.9",
+    "@types/moment": "^2.13.0",
     "@types/node": "~8.9.4",
     "@types/passport-google-oauth20": "^2.0.3",
     "@types/react": "16.9.17",
