feat: change google map to osm amp

--- a/package.json
+++ b/package.json
@@ -50,58 +50,62 @@
     }
   },
   "dependencies": {
-    "@material-ui/core": "^4.8.3",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.43",
-    "@material-ui/styles": "^4.8.2",
-    "cookie-parser": "^1.4.4",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/styles": "^4.11.2",
+    "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
-    "d3": "^5.15.0",
+    "d3": "^5.16.0",
     "document-register-element": "1.13.1",
     "express": "4.17.1",
-    "firebase": "^7.7.0",
+    "firebase": "^7.24.0",
     "firebase-admin": "^8.13.0",
-    "firebase-functions": "^3.11.0",
-    "geolib": "^3.2.1",
+    "firebase-functions": "^3.13.0",
+    "geolib": "^3.3.1",
     "googleapis": "^47.0.0",
-    "material-ui-image": "^3.2.2",
-    "mobx": "^5.15.2",
+    "leaflet": "^1.7.1",
+    "material-ui-image": "^3.3.1",
+    "mobx": "^5.15.7",
     "mobx-react-lite": "^1.5.2",
     "mobx-react-router": "^4.1.0",
-    "moment": "^2.27.0",
+    "moment": "^2.29.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-leaflet": "^3.0.5",
     "react-router-dom": "5.1.2",
-    "react-spinners": "^0.8.0",
+    "react-spinners": "^0.8.3",
     "request": "^2.88.2",
     "styled-components": "4.4.1",
-    "tsoa": "^2.5.12",
+    "tsoa": "^2.5.14",
     "typeface-roboto": "0.0.75",
-    "typescript-ioc": "^1.2.5"
+    "typescript-ioc": "^1.2.6"
   },
   "devDependencies": {
+    "@babel/helper-compilation-targets": "^7.12.5",
     "@babel/preset-react": "7.7.4",
     "@nrwl/cypress": "8.11.0",
     "@nrwl/eslint-plugin-nx": "8.11.0",
-    "@nrwl/express": "^8.11.0",
+    "@nrwl/express": "^8.12.11",
     "@nrwl/jest": "8.11.0",
-    "@nrwl/node": "^8.11.0",
-    "@nrwl/react": "^8.11.0",
+    "@nrwl/node": "^8.12.11",
+    "@nrwl/react": "^8.12.11",
     "@nrwl/web": "8.11.0",
     "@nrwl/workspace": "8.11.0",
     "@testing-library/react": "9.4.0",
-    "@types/cookie-session": "^2.0.37",
-    "@types/d3": "^5.7.2",
+    "@types/cookie-session": "^2.0.42",
+    "@types/d3": "^5.16.4",
     "@types/express": "4.17.0",
     "@types/geolib": "^2.0.23",
-    "@types/googlemaps": "^3.39.2",
+    "@types/googlemaps": "^3.40.5",
     "@types/jest": "24.0.9",
+    "@types/leaflet": "^1.5.19",
     "@types/moment": "^2.13.0",
     "@types/node": "~8.9.4",
-    "@types/passport-google-oauth20": "^2.0.3",
+    "@types/passport-google-oauth20": "^2.0.5",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
     "@types/react-router-dom": "5.1.3",
@@ -111,18 +115,18 @@
     "cypress": "3.6.1",
     "dotenv": "6.2.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "6.0.0",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.17.0",
     "eslint-plugin-react-hooks": "2.3.0",
-    "husky": "^4.2.5",
+    "husky": "^4.3.6",
     "jest": "24.1.0",
     "prettier": "^1.19.1",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.7"
   }
 }
